[gd_scene load_steps=18 format=2]

[ext_resource path="res://Sprites/Player/Run3.png" type="Texture" id=1]
[ext_resource path="res://Game/Player/PlayerController.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Player/Run0.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Player/Run7.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Player/Run4.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Player/Jump1.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Player/Idle0.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Player/Run1.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Player/Run2.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Player/Jump3.png" type="Texture" id=10]
[ext_resource path="res://Game/Player/PlayerDie.gd" type="Script" id=11]
[ext_resource path="res://Sprites/Sky/Sky.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Coin/gold_1.png" type="Texture" id=13]

[sub_resource type="CapsuleShape2D" id=1]
radius = 16.0
height = 28.0

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "Fall",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 1 ), ExtResource( 5 ), ExtResource( 4 ) ],
"loop": true,
"name": "Run",
"speed": 10.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "Jump",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=3]
radius = 14.0
height = 28.0

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 0.392157 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="Player" type="Node2D"]
script = ExtResource( 11 )

[node name="PlayerKinematicBody2D" type="KinematicBody2D" parent="."]
collision_layer = 3
collision_mask = 3
script = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="PlayerKinematicBody2D"]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerKinematicBody2D/Area2D"]
position = Vector2( 0, 4 )
shape = SubResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="PlayerKinematicBody2D"]
frames = SubResource( 2 )
animation = "Idle"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerKinematicBody2D"]
position = Vector2( 0, 4 )
shape = SubResource( 3 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="PlayerKinematicBody2D"]

[node name="ParallaxLayer" type="ParallaxLayer" parent="PlayerKinematicBody2D/ParallaxBackground"]
motion_scale = Vector2( 0.1, 0.1 )
motion_mirroring = Vector2( 704, 704 )

[node name="Sky" type="Sprite" parent="PlayerKinematicBody2D/ParallaxBackground/ParallaxLayer"]
scale = Vector2( 1.1, 1.1 )
texture = ExtResource( 12 )
centered = false

[node name="Camera2D" type="Camera2D" parent="PlayerKinematicBody2D"]
position = Vector2( 32, 0 )
current = true
zoom = Vector2( 1.1, 1.1 )
smoothing_enabled = true
smoothing_speed = 15.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ScorePanel" type="Panel" parent="CanvasLayer"]
anchor_left = 0.025
anchor_top = 0.025
anchor_right = 0.025
anchor_bottom = 0.025
margin_right = 84.0
margin_bottom = 40.0
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="CanvasLayer/ScorePanel"]
margin_left = 7.0
margin_top = 13.0
margin_right = 74.0
margin_bottom = 27.0
text = "9999"

[node name="CoinPanel" type="Panel" parent="CanvasLayer"]
anchor_left = 0.975
anchor_top = 0.025
anchor_right = 0.975
anchor_bottom = 0.025
margin_left = -84.0
margin_bottom = 40.0
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/CoinPanel"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 6.5
margin_top = -13.5
margin_right = 90.5
margin_bottom = 70.5
rect_scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/CoinPanel"]
modulate = Color( 1, 0.960784, 0, 1 )
margin_left = 34.9659
margin_top = 13.9864
margin_right = 44.9659
margin_bottom = 27.9864
text = "X"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Coins" type="Label" parent="CanvasLayer/CoinPanel"]
modulate = Color( 1, 0.960784, 0, 1 )
margin_left = 45.2967
margin_top = 13.8274
margin_right = 85.2967
margin_bottom = 27.8274
text = "1234"
__meta__ = {
"_edit_use_anchors_": false
}
